Fix for overflow

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -156,6 +156,6 @@ h3 {
 }
 
 .drink-tile {
-	height: 80px;
+	min-height: 80px;
 	margin: 10px auto 10px auto;
 }
